--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </p>
           </div>
         </div>
-        <div class="container text-center py-3 small" style="color: #734207;">&copy Patrick Koffu 2025 | <a href="https://www.fliesen-koffu.at/impressum.html" class="link-fancy" style="color: #734207;">Impressum</a> | Made by <a href="https://ltdesign.work/" class="link-fancy" target="_blank" style="color: #734207;">LT Design</a></div>
+        <div class="container text-center py-3 small" style="color: #734207;">&copy Patrick Koffu 2025 | <a href="impressum.html" class="link-fancy" style="color: #734207;">Impressum</a> | Made by <a href="https://ltdesign.work/" class="link-fancy" target="_blank" style="color: #734207;">LT Design</a></div>
       </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
